WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157881
[JSC] FTL can crash on stack overflow
https://bugs.webkit.org/show_bug.cgi?id=157881
Summary
[JSC] FTL can crash on stack overflow
Benjamin Poulain
Reported
2016-05-18 21:13:01 PDT
[JSC] FTL can crash on stack overflow
Attachments
Patch
(12.96 KB, patch)
2016-05-18 21:19 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-05-18 21:19:48 PDT
Created
attachment 279344
[details]
Patch
WebKit Commit Bot
Comment 2
2016-05-18 21:21:42 PDT
Attachment 279344
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:204: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:233: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:288: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:291: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Saboff
Comment 3
2016-05-19 06:19:06 PDT
Comment on
attachment 279344
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2016-05-19 19:36:52 PDT
Comment on
attachment 279344
[details]
Patch Clearing flags on attachment: 279344 Committed
r201207
: <
http://trac.webkit.org/changeset/201207
>
WebKit Commit Bot
Comment 5
2016-05-19 19:36:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug